--- a/frontend_festival/src/app/components/common/navbar/navbar.component.html
+++ b/frontend_festival/src/app/components/common/navbar/navbar.component.html
@@ -1,1 +1,57 @@
-<nav ></nav>
+<nav class="navbar navbar-expand-md  bg-body-tertiary">
+    <div class="container-fluid">
+      <h2 class="navbar-brand" href="#">Festivales</h2>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
+          </li>
+  
+          @if(authService.user === null){
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/login">Iniciar sesión</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/signup">Registrarse</a>
+            </li>
+          }
+          @else if (authService.user.role === 'admin') {
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Área Admin
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" routerLink="/admin/bookings">Reservas</a></li>
+                <li><a class="dropdown-item" routerLink="/admin/users">Usuarios</a></li>
+                <li><a class="dropdown-item" routerLink="/admin/festivals">Festivales</a></li>
+           
+              </ul>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link" (click)="authService.deleteUser()">Cerrar sesión</button>
+            </li>
+          }
+          @else {
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Área privada
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" routerLink="/me/my-bookings">Mis reservas</a></li>
+                <li><a class="dropdown-item" routerLink="/me/my-info">Mi información</a></li>
+           
+              </ul>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link" (click)="authService.deleteUser()">Cerrar sesión</button>
+            </li>
+          }
+          
+         
+        </ul>
+      </div>
+    </div>
+  </nav>
