--- a/frontend_festival/src/app/pages/admin/festivals/festivals.component.html
+++ b/frontend_festival/src/app/pages/admin/festivals/festivals.component.html
@@ -23,7 +23,7 @@
                     <button (click)="eliminar(festival._id)" id="button" class="btn btn-outline-danger">Eliminar</button>
                 </div>
                 <div class="card-footer">
-                    <small class="text-muted">Modelo del año {{ festival.year }}</small>
+                    <small class="text-muted"> Localización {{ festival.location }}</small>
                 </div>
             </div>
         </li>
