--- a/frontend_festival/src/app/pages/admin/festivals/festivals.component.html
+++ b/frontend_festival/src/app/pages/admin/festivals/festivals.component.html
@@ -16,7 +16,7 @@
             <div class="card h-100">
                 <img [src]="festival.image" height="160" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">{{ festival.festivalName }} {{ festival.model }}</h5>
+                    <h5 class="card-title">{{ festival.festivalName }} {{ festival.type }}</h5>
                     <p class="card-text">{{ festival.description }}</p>
                     <p class="card-text">{{ festival.price | divisa }}</p>
                     <button (click)="editar(festival._id)" class="btn btn-outline-secondary">Editar</button>
