--- a/frontend_festival/src/app/pages/admin/bookings/bookings.component.html
+++ b/frontend_festival/src/app/pages/admin/bookings/bookings.component.html
@@ -35,8 +35,8 @@
             <td>{{ booking.user.role }}</td>
             <td>{{ booking.startDate | formatDate }}</td>
             <td>{{ booking.endDate | formatDate }}</td>
-            <td>{{ booking.festival.brand }}</td>
-            <td>{{ booking.festival.model }}</td>
+            <td>{{ booking.festival.festivalName }}</td>
+            <td>{{ booking.festival.type }}</td>
             <td>{{ booking.price | divisa }}</td>
             <td>{{ booking.discount }}</td>
           </tr>
