--- a/frontend_festival/src/app/components/common/footer/footer.component.html
+++ b/frontend_festival/src/app/components/common/footer/footer.component.html
@@ -1,10 +1,10 @@
-<footer class="text-center bg-dark text-white p-4">
+<footer>
     Festivals Copyright &copy; 2024
-    <div class="container mt-3">
-        <div class="row">
-            <span class="col-md-4">Instagram <i class="fa-brands fa-instagram"></i> </span>
-            <span class="col-md-4">Twitter <i class="fa-brands fa-twitter"></i> </span>
-            <span class="col-md-4">Facebook <i class="fa-brands fa-facebook"></i> </span>
+    <div class=>
+        <div >
+            <span class="instagram">Instagram <i class="fa-brands fa-instagram"></i> </span>
+            <span class="twitter">Twitter <i class="fa-brands fa-twitter"></i> </span>
+            <span class="facebook">Facebook <i class="fa-brands fa-facebook"></i> </span>
         </div>
     </div>
 </footer>
