--- a/frontend_festival/src/app/pages/admin/bookings/bookings.component.html
+++ b/frontend_festival/src/app/pages/admin/bookings/bookings.component.html
@@ -1,5 +1,5 @@
 @if(bookings.length === 0) {
-    <div class="alert alert-warning">
+    <div class="no-purchases" >
       <i class="fa fa-circle-info"></i>
       No tienes compras todavía
     </div>
@@ -23,10 +23,10 @@
         @for(booking of bookings; track booking) {
           <tr>
             <td>
-              <button [disabled]="!(booking.startDate | canCancel)" (click)="eliminar(booking._id)" class="btn btn-danger btn-sm me-1">
-                <i class="fa fa-trash"></i>
+              <button [disabled]="!(booking.startDate | canCancel)" (click)="eliminar(booking._id)" >
+               
               </button>
-              <button [disabled]="!(booking.startDate | canCancel)" (click)="editar(booking._id)"  class="btn btn-primary btn-sm">
+              <button [disabled]="!(booking.startDate | canCancel)" (click)="editar(booking._id)"  >
                 <i class="fa fa-pencil"></i>
               </button>
             </td>
