--- a/frontend_festival/src/app/pages/admin/users/users.component.html
+++ b/frontend_festival/src/app/pages/admin/users/users.component.html
@@ -1,5 +1,5 @@
 @if (users.length === 0) {
-    <div class="alert alert-warning">
+    <div class="alert alert-warning" id="no-users">
       <i class="fa fa-circle-info"></i>
       No hay usuarios registrados todavía
     </div>
