--- a/frontend_festival/src/app/app.component.html
+++ b/frontend_festival/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <app-navbar></app-navbar>
 
-<main class="container border rounded p-4 my-3">
+<main class="container ">
   <router-outlet />
 </main>
 
