--- a/frontend_festival/src/app/pages/login/login.component.html
+++ b/frontend_festival/src/app/pages/login/login.component.html
@@ -1,31 +1,27 @@
-<h1> <i class="fa fa-user"></i> Inicio de sesión</h1>
-<form [formGroup]="form" action=""  (ngSubmit)="login()">
-    <div class="mb-3">
-        <label class="form-label" for="">Email</label>
-        <input formControlName="email" class="form-control" type="text">
-    </div>
 
-    <div class="mb-3">
-        <label class="form-label" for="">Contraseña</label>
-
-        <div class="input-group mb-3">
-            <input formControlName="password" [type]="passwordType" class="form-control">    
-            <button (click)="passwordType = (passwordType==='text')? 'password':'text'" class="btn btn-outline-secondary" type="button" >
-                @if(passwordType === 'text'){
-                    <i class="fa fa-eye-slash"></i>
-                }
-                @else {
-                    <i class="fa fa-eye"></i>
-                }
-                
-            </button>
+<div class="container">
+    <form [formGroup]="form" (ngSubmit)="login()">
+        <h1><i class="fa fa-user"></i> Inicio de sesión</h1>
+        
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input formControlName="email" id="email" type="text" class="form-control">
         </div>
-    </div>
 
-    <button class="btn btn-primary"> <i class="fa fa-key"></i> Iniciar sesión</button>
-</form>
+        <div class="form-group">
+            <label for="password">Contraseña</label>
+            <div class="password-group">
+                <input formControlName="password" id="password" [type]="passwordType" class="form-control">
+                <button (click)="togglePasswordVisibility()" type="button" class="btn btn-outline-secondary password-toggle">
+                    <i class="fa" [ngClass]="passwordIconClass"></i>
+                </button>
+            </div>
+        </div>
 
-
-<p>
-    ¿Todavía no tienes cuenta? <a routerLink="/signup"> Regístrate aquí</a> 
-</p>
+        <button type="submit" class="submit-button"> <i class="fa fa-key"></i> Iniciar sesión</button>
+    </form>
+    
+    <p>
+        ¿Todavía no tienes cuenta? <a routerLink="/signup" class="signup-link">Regístrate aquí</a>
+    </p>
+</div>
