--- a/frontend_festival/src/app/pages/signup/signup.component.html
+++ b/frontend_festival/src/app/pages/signup/signup.component.html
@@ -1,35 +1,20 @@
-<h1><i class="fa fa-user"></i> Registrate aquí</h1>
-<form [formGroup]="form" (ngSubmit)="signup()" action="">
-  <div class="mb-3">
-    <label class="form-label" for="">Nombre</label>
-    <input formControlName="name" class="form-control" type="text" />
-  </div>
 
-  <div class="mb-3">
-    <label class="form-label" for="">Email</label>
-    <input formControlName="email" class="form-control" type="text" />
-  </div>
-
-  <div class="mb-3">
-    <label class="form-label" for="">Contraseña</label>
-
-    <div class="input-group mb-3">
-        <input formControlName="pwd" [type]="passwordType" class="form-control">
-        <button (click)="passwordType = (passwordType ==='text')? 'password':'text'" class="btn btn-outline-secondary" type="button" >
-            @if(passwordType === 'text'){
-                <i class="fa fa-eye-slash"></i>
-            }
-            @else {
-                <i class="fa fa-eye"></i>
-            }
-            
-        </button>
-      </div>
-  </div>
-
-  <button class="btn btn-primary"><i class="fa fa-key"></i> Registrarse</button>
-</form>
-
-<p>
-  ¿Ya tienes cuenta? <a routerLink="/login"> Inicia sesión aquí</a> 
-</p>
+    <div class="container">
+        <form class="login-form">
+            <h1 class="form-title">Registrarse</h1>
+            <div class="form-group">
+                <label for="nombre" class="form-label">Nombre Completo</label>
+                <input type="text" id="nombre" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="email" class="form-label">Correo Electrónico</label>
+                <input type="email" id="email" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" id="password" class="form-control" required>
+            </div>
+            <button type="submit" class="submit-button">Registrarse</button>
+            <p class="signup-text">¿Ya tienes una cuenta? <a href="#" class="signup-link">Inicia sesión aquí</a></p>
+        </form>
+    </div>
