--- a/frontend_festival/src/app/pages/signup/signup.component.html
+++ b/frontend_festival/src/app/pages/signup/signup.component.html
@@ -1,7 +1,7 @@
 
     <div class="container">
         <form class="login-form">
-            <h1 class="form-title">Registrarse</h1>
+            <h1><i class="fa fa-user"></i> Registrarse</h1>
             <div class="form-group">
                 <label for="nombre" class="form-label">Nombre Completo</label>
                 <input type="text" id="nombre" class="form-control" required>
