--- a/frontend_festival/src/app/components/common/navbar/navbar.component.css
+++ b/frontend_festival/src/app/components/common/navbar/navbar.component.css
@@ -11,11 +11,18 @@ nav div {
     justify-content: space-between; 
     align-items: center; 
 }
+nav .logo {
+    width: 120px;
+    height: 120px;
+    border: 1px solid white;
+    border-radius: 30px;
+    margin-left: 70px;
+}
 
 nav h2 {
     margin: 0;
     font-size: 4rem; /* Tamaño de fuente del título */
-    background-image: url('http://photos.prnewswire.com/prnfull/20140319/CG85859LOGO?p=publish'); /* Imagen de fondo */
+    background-image: url('https://st2.depositphotos.com/3474805/7901/v/950/depositphotos_79018730-stock-illustration-beautiful-summer-festival-element.jpg'); /*Imagen de fondo*/
     background-size: cover; /* Cubrir todo el contenedor */
     background-position: center; /* Centrar la imagen */
     background-repeat: no-repeat; /* No repetir la imagen */
@@ -48,7 +55,7 @@ nav button span {
 
 nav #navbarNav {
     display: flex;
-    justify-content: center; 
+    justify-content: center;
 }
 
 nav ul {
@@ -64,17 +71,19 @@ nav ul li {
     padding: 0.5rem 1rem;
     border-radius: 5px;
     transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease, border 0.3s ease; /* Transiciones suaves */
+    z-index: 2000;
 }
 
 nav ul li a, nav ul li button {
     color: #ffffff; 
     text-decoration: none;
-    font-size: 40px; 
+    font-size: 20px; 
     font-family: Poppins;
     display: block;
     transition: color 0.3s ease, transform 0.3s ease; /* Transiciones suaves */
     position: relative;
     z-index: 1;
+    margin-right: 100px;
 }
 
 /* Efecto festivo de desplazamiento y cambio de color */
@@ -130,7 +139,7 @@ nav ul li a span {
 nav ul ul {
     display: none; 
     position: absolute;
-    background-color: #dfff6b; 
+    background-color: #c3d18f; 
     padding: 1rem;
     border-radius: 10px; 
     top: 100%; /* Posicionar justo debajo del elemento padre */
