--- a/frontend_festival/src/app/pages/login/login.component.html
+++ b/frontend_festival/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container img-container">
     <form [formGroup]="form" (ngSubmit)="login()">
         <h1><i class="fa fa-user"></i> Inicio de sesión</h1>
         
