--- a/frontend_festival/src/app/components/common/navbar/navbar.component.html
+++ b/frontend_festival/src/app/components/common/navbar/navbar.component.html
@@ -3,8 +3,8 @@
       <h2 class="logo" href="#"> </h2>
  
 
-      <div id="navbarNav">
-        <ul >
+      <div class= "menu-icon" id="navbarNav menu-icon">
+        <ul class="menu" id="menu">
           <li >
             <a aria-current="page" routerLink="/">Inicio</a>
           </li>
@@ -51,6 +51,7 @@
           
          
         </ul>
+        <script src="script.js"></script>
       </div>
     </div>
   </nav>
