--- a/frontend_festival/src/app/pages/admin/users/users.component.css
+++ b/frontend_festival/src/app/pages/admin/users/users.component.css
@@ -1,7 +1,7 @@
 /* Estilos generales */
 body {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(45deg, #ff9a9e, #fad0c4);
+    background: linear-gradient(45deg, #ff6b6b, #ffcc00);
     color: #333;
     margin: 0;
     padding: 0;
