--- a/frontend_festival/src/app/pages/admin/bookings/bookings.component.html
+++ b/frontend_festival/src/app/pages/admin/bookings/bookings.component.html
@@ -23,9 +23,12 @@
         @for(booking of bookings; track booking) {
           <tr>
             <td>
+              <div class="separador">
               <button [disabled]="!(booking.startDate | canCancel)" (click)="eliminar(booking._id)" >
-               
+                <i class="fa fa-trash"></i>
               </button>
+              </div>
+              
               <button [disabled]="!(booking.startDate | canCancel)" (click)="editar(booking._id)"  >
                 <i class="fa fa-pencil"></i>
               </button>
