--- a/frontend_festival/src/app/components/common/footer/footer.component.html
+++ b/frontend_festival/src/app/components/common/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     Festivals Copyright &copy; 2024
-    <div class=>
+    <div>
         <div >
             <span class="instagram">Instagram <i class="fa-brands fa-instagram"></i> </span>
             <span class="twitter">Twitter <i class="fa-brands fa-twitter"></i> </span>
