--- a/frontend_festival/src/app/pages/home/home.component.html
+++ b/frontend_festival/src/app/pages/home/home.component.html
@@ -1,31 +1,60 @@
-<h1>Festivales Verano 2024</h1>
-<div class="input-group mb-3">
-  <span class="input-group-text">
-    <i class="fa fa-filter"></i>
-  </span>
-  <input [(ngModel)]="filtro" type="text" class="form-control" placeholder="Filtrar">
-</div>
 
-<ul class="row list-unstyled">
-  <li *ngFor="let festival of (festivals | filterFestivals: filtro)" class="col-md-6 col-sm-12 col-lg-3 my-1">
-    <div class="card h-100">
-      <img [src]="festival.image" height="160" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">{{ festival.festivalName }} {{ festival.type }}</h5>
-        <p class="card-text">{{ festival.description }}</p>
-        <p class="card-text">{{ festival.price | divisa }} por día</p>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Festivales Verano 2024</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <style>
+    .text-shadow-example {
+      font-size: 36px;
+      color: #333;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+    .location-icon {
+      color: red; /* Color del icono */
+      font-size: 24px; /* Tamaño del icono */
+      margin-right: 10px; /* Espacio a la derecha del icono */
+    }
+  </style>
+</head>
+<body>
+  <h1>Festivales Verano 2024</h1>
+  <div class="input-group mb-3">
+    <span class="input-group-text">
+      <i class="fa fa-search"></i>
+    </span>
+    <input [(ngModel)]="filtro" type="text" class="form-control" placeholder="Filtrar">
+  </div>
 
-        <ng-container *ngIf="festival.available; else noStock">
-          <a *ngIf="!isAdmin" [routerLink]="'/buy/' + festival._id" class="btn btn-outline-primary">Comprar</a>
-        </ng-container>
-        <ng-template #noStock>
-          <span class="sin-stock">Entradas no disponibles</span>
-        </ng-template>
+  <ul class="row list-unstyled">
+    <li *ngFor="let festival of (festivals | filterFestivals: filtro)" class="col-md-6 col-sm-12 col-lg-3 my-1">
+      <div class="card h-100">
+        <img [src]="festival.image" height="160" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h4 class="card-title">
+            <a [routerLink]="'/buy/' + festival._id" class="festival-title-link">{{ festival.festivalName }}</a>
+          </h4>
+          <p class="card-text">{{ festival.description }}</p>
+          <p class="card-text">{{ festival.price | divisa }} por día</p>
+
+          <ng-container *ngIf="festival.available; else noStock">
+            <a *ngIf="!isAdmin" [routerLink]="'/buy/' + festival._id" class="btn btn-outline-primary">Comprar</a>
+          </ng-container>
+          <ng-template #noStock>
+            <span class="sin-stock">Entradas no disponibles</span>
+          </ng-template>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">
+            <i class="fas fa-map-marker-alt location-icon"></i>
+            Localización {{ festival.location }}
+          </small>
+        </div>
       </div>
-      <div class="card-footer">
-        <small class="text-muted">Localización {{ festival.location }}</small>
-      </div>
-    </div>
-  </li>
-  
-</ul>
+    </li>
+  </ul>
+</body>
+</html>
+
