--- a/frontend_festival/src/app/pages/login/login.component.css
+++ b/frontend_festival/src/app/pages/login/login.component.css
@@ -1,33 +1,15 @@
-
-body, html {
-    font-family: 'Arial', sans-serif;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
 /* Estilo del contenedor principal */
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
-    background-image: url(https://img.freepik.com/premium-photo/party-beach-blurred-people-having-night-beach-party-generative-ai_431161-4901.jpg);
     background-repeat: no-repeat;
-    background-size: contain; 
+    background-size: cover; /* Asegúrate de que la imagen cubra toda el área */
     background-position: center;
-    height: 100vh; 
-    width:100%;
-    background-size: cover; 
+    height: 100vh; /* Asegúrate de que el contenedor ocupe toda la altura de la ventana */
+    box-sizing: border-box; /* Incluye el padding en el tamaño total del contenedor */
 }
-
 
 /* Estilo del formulario */
 form {
@@ -42,7 +24,7 @@ form {
     align-items: center;
 }
 
-
+/* Otros estilos permanecen igual */
 h1 {
     font-size: 2.5rem;
     color: #000000; 
@@ -54,14 +36,12 @@ h1 {
     margin-bottom: 1.5rem;
 }
 
-
 label {
     color: #000000; 
     font-size: 1.2rem;
     display: block;
     margin-bottom: 0.5rem;
 }
-
 
 .form-control {
     background-color: #fff; 
@@ -73,19 +53,16 @@ label {
     box-sizing: border-box;
 }
 
-
 .password-group {
     display: flex;
     align-items: center;
     width: 100%;
 }
 
-
 .password-toggle {
     margin-left: 0.5rem;
 }
 
-/* Estilo del botón de inicio de sesión */
 .submit-button {
     background-color: #ff5722; 
     border: none;
@@ -98,11 +75,9 @@ label {
     cursor: pointer;
 }
 
-
 .submit-button:hover {
     background-color: #e64a19; 
 }
-
 
 p {
     text-align: center;
@@ -110,15 +85,12 @@ p {
     color: #ffffff; 
 }
 
-
 .signup-link {
     color: #ff5722;
     text-decoration: none;
-   
 }
 
 .signup-link:hover {
     text-decoration: underline;
 }
-
 
